Fix overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -56,6 +56,15 @@ pre[class*="language-"] {
   color: #fff;
 }
 
+code[class*="language-"],
+pre[class*="language-"] {
+  overflow-wrap: break-word;
+}
+
+.prose code {
+  white-space: pre-wrap;
+}
+
 .prose code::before {
   content: "";
 }
